# vortex

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_zh.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bm_posting_codec.cpp  bm_scorer.cpp  bm_search.cpp  bm_term_dict.cpp
docs/: index_protocol.md  inverted_index_design.md  inverted_index_design_v1.md  search_demo_design.md
examples/: CMakeLists.txt  basic_usage.cpp
examples/search_demo/: CMakeLists.txt  main.cpp  sample_data.json  search_page.h
include/vortex/core/: arena.h  checksum.h  document.h  query.h  result.h  schema.h  search_result.h  stats.h  status.h  types.h
include/vortex/inverted/: analyzer.h  delete_bitmap.h  external_id_map.h  filter.h  forward_index.h  index_reader.h  index_writer.h  posting_codec.h  posting_list.h  scorer.h  segment.h  segment_list.h  segment_merger.h  skip_list.h  term_dict.h  tokenizer.h  unicode.h  wal.h
src/core/: arena.cpp  schema.cpp  stats.cpp
src/inverted/: analyzer.cpp  delete_bitmap.cpp  external_id_map.cpp  filter.cpp  forward_index.cpp  index_reader.cpp  index_writer.cpp  posting_codec.cpp  posting_codec_avx2.cpp  posting_list.cpp  scorer.cpp  segment.cpp  segment_list.cpp  segment_merger.cpp  skip_list.cpp  term_dict.cpp  tokenizer.cpp  unicode.cpp  wal.cpp
tests/: CMakeLists.txt  test_analyzer.cpp  test_arena.cpp  test_delete_bitmap.cpp  test_external_id_map.cpp  test_forward_index.cpp  test_integration.cpp  test_merge.cpp  test_posting_codec.cpp  test_scorer.cpp  test_skip_list.cpp  test_term_dict.cpp  test_wal.cpp
